<resources>
    <string name="app_name">Always On Wall Clock &amp; Weather</string>

    <string name="settings_button">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="x_hour_forecast">%s Hour\nForecast for\n%s</string>
    <string name="x_day_forecast">%s Day\nForecast for\n%s</string>
    <string name="no_geo">No Geo</string>
    <string name="no_key">No Key</string>
    <string name="last_updated">Updated\n%s</string>
    <string name="current_weather_details">%s - Updated %s</string>
    <string name="current_sunrise_details">Sunrise: %s</string>
    <string name="current_sunset_details">Sunset: %s</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Update Frequency</string>

    <string name="pref_key_background_color">BACKGROUND_COLOR</string>
    <string name="pref_key_text_color">TEXT_COLOR</string>
    <string name="pref_key_api_key">API_KEY</string>
    <string name="pref_key_update_forecast_frequency">UPDATE_FORECAST_FREQUENCY</string>
    <string name="pref_key_update_current_frequency">UPDATE_CURRENT_FREQUENCY</string>
    <string name="pref_key_font_size_time">FONT_SIZE_TIME</string>
    <string name="pref_key_font_size_date">FONT_SIZE_DATE</string>
    <string name="pref_key_font_size_weather_temp">FONT_SIZE_WEATHER_TEMP</string>
    <string name="pref_key_font_size_weather_time">FONT_SIZE_WEATHER_TIME</string>
    <string name="pref_key_icon_size">ICON_SIZE_WEATHER</string>
    <string name="pref_key_weather_time_interval">TIME_INTERVAL_WEATHER</string>
    <string name="pref_key_forecast_days">FORECAST_DAYS</string>
    <string name="pref_key_manage_brightness">MANAGE_BRIGHTNESS</string>

    <string name="pref_background_color">Background Color</string>
    <string name="pref_background_color_description">Choose color of the background.</string>
    <string name="default_background_color_string">#000000</string>
    <string name="pref_text_color">Text Color</string>
    <string name="pref_text_color_description">Choose the color of all text.</string>
    <string name="default_text_color_string">#33b5e5</string>
    <string name="pref_font_size_clock_time">Time Font Size (sp)</string>
    <string name="default_font_size_clock_time">160</string>
    <string name="pref_font_size_clock_date">Date Font Size (sp)</string>
    <string name="default_font_size_clock_date">80</string>
    <string name="pref_font_size_weather_temp">Temp Font Size (sp)</string>
    <string name="default_font_size_weather_temp">80</string>
    <string name="pref_font_size_weather_time">Weather Time Font Size (sp)</string>
    <string name="default_font_size_weather_time">50</string>
    <string name="pref_icon_size_weather">Weather Icon Size</string>
    <string name="default_icon_size_weather">3</string>
    <string name="pref_time_interval_weather">Weather Display Time Interval</string>
    <string name="default_time_interval_weather">2</string>
    <string name="pref_manage_brightness">Brightness with Sunrise/Sunset</string>
    <string name="pref_manage_brightness_description">Must have device in manual brightness mode</string>
    <string name="default_manage_brightness">true</string>
    <string name="pref_forecast_days"># of days in forecast (max 5)</string>
    <string name="default_forecast_days">5</string>

    <string-array name="pref_font_size_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>170</item>
        <item>180</item>
        <item>190</item>
        <item>200</item>
    </string-array>

    <string-array name="pref_weather_icon_size_display">
        <item>1.0x</item>
        <item>1.5x</item>
        <item>2.0x</item>
        <item>2.5x</item>
        <item>3.0x</item>
        <item>3.5x</item>
        <item>4.0x</item>
        <item>4.5x</item>
        <item>5.0x</item>
    </string-array>

    <string-array name="pref_weather_icon_size_values">
        <item>1.0</item>
        <item>1.5</item>
        <item>2.0</item>
        <item>2.5</item>
        <item>3.0</item>
        <item>3.5</item>
        <item>4.0</item>
        <item>4.5</item>
        <item>5.0</item>
    </string-array>

    <string-array name="pref_weather_time_interval_display">
        <item>Every 3 Hours</item>
        <item>Every 6 Hours</item>
        <item>Every 12 Hours</item>
        <item>Every 24 Hours</item>
    </string-array>

    <string-array name="pref_weather_time_interval_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>8</item>
    </string-array>

    <string-array name="pref_forecast_days_valuess">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_forecast_days_description">The number of days in the forecast you want to display.</string>

    <string-array name="pref_manage_brightness_display">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="pref_manage_brightness_values">
        <item>true</item>
        <item>false</item>
    </string-array>

    <string name="pref_openweathermap_api_key">Open WeatherMap API Key</string>
    <string name="pref_openweathermap_api_key_description">You need an API Key from https://openweathermap.org. Please sign up for one and put it here to get weather.</string>

    <string name="pref_weather_update_forecast_frequency">Weather Update Forecast Frequency (minutes)</string>
    <string name="pref_weather_update_current_frequency">Weather Update Current Frequency (minutes)</string>
    <string name="loading">...</string>
    <string-array name="pref_weather_update_frequency_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>180</item>
    </string-array>


</resources>
